[Capstone Design 1] Team School Health1st Android Project. (Prof. 고석주) 20170917 12:26 / Main, Setting Activity Update

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Activity -->
+        <activity android:name=".Preference.ChildActivity" android:label=".ChildActivity"/>
+        <activity android:name=".Preference.ParentActivity" android:label="ParentActivity"/>
+
     </application>
+
+    <!-- Permission -->
+    <uses-permission android:name="android.permission.VIBRATE"/>
 
 </manifest>
