--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,6 @@ dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
     compile 'jp.wasabeef:glide-transformations:3.0.1'
     compile 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
-    compile 'com.tsengvn:typekit:1.0.1'
     compile 'gun0912.ted:tedpermission:2.0.0'
     compile 'cn.pedant.sweetalert:library:1.3'
     compile 'com.scottyab:aescrypt:0.0.1'
@@ -48,4 +47,9 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
     /* HTTP API */
     compile 'com.squareup.okhttp3:okhttp:3.9.0'
+}
+
+apply plugin: 'realm-android'
+realm {
+    syncEnabled = true;
 }
